<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/login_gradient"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center_vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="48dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/email"
                android:textColor="@color/azul"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/registro_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_email"
                android:fontFamily="@font/nunito_semibold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/senha"
                android:textColor="@color/azul"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/registroSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_senha"
                android:fontFamily="@font/nunito_semibold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/confimacao"
                android:textColor="@color/azul"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/registroConfirmacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_confirmacao"
                android:fontFamily="@font/nunito_semibold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_criar"
                android:fontFamily="@font/nunito_bold"
                android:textSize="20sp"
                android:backgroundTint="@color/azul"/>
            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:fontFamily="@font/nunito_bold"
                android:textSize="20sp"
                android:backgroundTint="@color/azul"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>