<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relatorio"
            android:textSize="32sp"
            android:padding="10dp"
            android:fontFamily="@font/nunito_bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@color/azul"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/viagem_total_viajantes"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/totalViajantes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="..."
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/destino"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/totalDestino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="..."
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/viagem_duracao"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/totalDuracao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="..."
                    android:textColor="@color/white"
                    android:textSize="20sp" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/viagem_custo_pessoa"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/totalCustoPessoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="..."
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/viagem_custo_total"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/totalCustoViagem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="..."
                    android:textColor="@color/white"
                    android:textSize="20sp" />




            </LinearLayout>
            <Button
                android:id="@+id/btnVoltarHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:fontFamily="@font/nunito_bold"
                android:textSize="20sp"
                android:backgroundTint="@color/azul"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>