<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viagens"
            android:textSize="32sp"
            android:padding="10dp"
            android:fontFamily="@font/nunito_bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@color/azul"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/btnNovaViagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_nova_viagem"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/azul_bebe"
                android:layout_marginTop="10dp"/>



            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/azul_bebe"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerViagens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:padding="20dp">


            <ListView
                android:id="@+id/listViagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>